<resources>
    <string name="app_name">Dismas</string>
    <string name="user_name">Dismas Nyagaka</string>
    <string name="phone">+254 700 415 505</string>
    <string name="public_repos">Public repos</string>
    <string name="sample">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="email">imayadismas@gmail.com</string>
    <string name="stats">---- Stats</string>
    <string name="notable_projects">---- Notable Projects</string>
    <string name="linked_in">LinkedIn</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="blog">Blog</string>
    <string name="android">&#183;  &#8212; Android &#8212;  &#183;</string>
    <string name="web">&#183;  &#8212; Website &#8212;  &#183;</string>
    <string name="software_engineer">&#183;  &#8212; Software Engineer &#8212;  &#183;</string>
    <string name="nairobi">Nairobi</string>
    <string name="email_label">Email</string>
    <string name="call_label">Call</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="slogan">&#183; It\'s the small deeds that matter &#183;</string>
    <string name="share_app">Have a look at Dismas Profile on Google Play:  https://play.google.com/store/apps/details?id=%s without the need to install it.</string>
    <string name="profile">Dismas Profile App</string>
    <string name="share_via">Share via</string>
    <string name="playstore_details">http://play.google.com/store/apps/details?id=</string>
    <string name="no_email_clients_installed">No email clients installed</string>
    <string name="send_email_using">Send email using…</string>
    <string name="hello_there">Hello There</string>
    <string name="hello">Hello Imaya,</string>
    <string name="market">market://details?id=</string>
    <string name="website_under_development">Website is under development</string>
    <string name="blog_under_development">Blog is under development</string>
    <string name="certified_android_software_engineer">Certified Android Software Engineer</string>
    <string name="permission_denied">Permission denied, the app requires your Phone Call permission</string>
    <string name="permission_needed">Call Permission Needed</string>
    <string name="phone_call_permission">This app needs the Phone Call permission. Please accept to place a call</string>
    <string name="request_phone_call_permission">Request Call Phone Permission</string>
    <string name="searching">…Searching…</string>
    <string name="search_successful">…Search successful!…</string>
    <string name="found">Found</string>
    <string name="pipe">|</string>
    <string name="dismas_i_nyagaka_found_s">Dismas I. Nyagaka found\n%s</string>
    <string name="terminal_imaya">Terminal: Imaya</string>
    <string name="last_visit_s_on_console">Last visit: %s on console</string>
    <string name="terminal_start"><b>"➜ ~ "</b></string>
    <string name="menu_about">/about</string>
    <string name="menu_experience">/experience</string>
    <string name="menu_portfolio">/portfolio</string>
    <string name="menu_say_hi">/say hi</string>
    <string name="ls_menu">ls menu</string>
    <string name="about">about</string>
    <string name="experience">experience</string>
    <string name="portfolio">portfolio</string>
    <string name="say_hi">say hi</string>
    <string name="clear">clear</string>
    <string name="zsh">"zsh: "</string>
    <string name="command_not_found">"command not found: "</string>
    <string name="menu_clear">/clear</string>
</resources>
