<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuCall"
        android:orderInCategory="8"
        android:icon="@drawable/phone"
        android:title="@string/call_label"
        app:showAsAction="always"
        android:textSize="14sp"/>

    <item
        android:id="@+id/menuEmail"
        android:orderInCategory="9"
        android:icon="@drawable/mail"
        android:title="@string/email_label"
        app:showAsAction="ifRoom"
        android:textSize="14sp"/>

    <item
        android:icon="@drawable/ic_menu_overflow_24dp"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title="@string/settings">
        <menu>

            <item
                android:id="@+id/menuShare"
                android:orderInCategory="9"
                android:icon="@drawable/ic_share_24dp"
                android:title="@string/share"
                app:showAsAction="never|withText"
                android:textSize="14sp"/>

            <item
                android:id="@+id/menuRate"
                android:orderInCategory="9"
                android:icon="@drawable/ic_rate_24dp"
                android:title="@string/rate"
                app:showAsAction="never|withText"
                android:textSize="14sp"/>
        </menu>
    </item>

</menu>