<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:background="#00555555"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="5dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="60"
            android:orientation="horizontal"
            android:weightSum="100">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_launcher_round"
                    android:contentDescription="@string/app_name"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/colorBorder"/>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:background="@drawable/round_bottom"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="10dp"
            android:weightSum="100"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:lineSpacingExtra="5sp"
                android:textSize="14sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:fontFamily="@font/comfortaa_bold"/>


            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:lineSpacingExtra="5sp"
                android:textSize="13sp"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:textColor="@color/colorSecondaryText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|end">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="110dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/cancel_btn"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textColor="@color/colorErrorText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|start">

                    <Button
                        android:id="@+id/btnOk"
                        android:layout_width="110dp"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/ok_btn"
                        android:text="@string/confirm"
                        android:textAllCaps="true"
                        android:textColor="@color/primary_dark" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>